Fix grid scrolling flicker on chrome

--- a/src/strand-item-recycler/strand-item-recycler.scss
+++ b/src/strand-item-recycler/strand-item-recycler.scss
@@ -34,6 +34,31 @@
 	overflow: hidden;
 }
 
+#overlay {
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	display: flex;
+	position: absolute;
+	pointer-events: none;
+
+	#fixes-flicker {
+		top: 0;
+		left: 0;
+		right: 0;
+		width: 100%;
+		height: 100%;
+		display: flex;
+		pointer-events: none;
+	}
+}
+
+#overlay > #fixes-flicker > ::content > *,
+#overlay > ::content > * {
+	pointer-events: all;
+}
+
 #constrainer {
 	display: inline-block;
 }
